# tcpWinSD

./: CMakeLists.txt  autogen.sh  configure.ac  default.config  meson.build  t2plconf
doc/: Makefile  tcpWin.tex
src/: Makefile.am  tcpWinSD.c  tcpWinSD.h
tests/: tcpWin.flags
